
* XINS/Java Common Library:
  - PropertyReader interface no longer directly extends LogdocSerializable.
    The class function serialize(PropertyReader,LogdocStringBuffer) has moved
    from class AbstractPropertyReader to class PropertyReaderUtils. Use that
    class function for a default way of serializing a PropertyReader, using
    the Whisl encoding.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.200:

* XINS/Java Common Library:
  - Added class function parseHexBytes() to class HexConverter.

* Build and release process:
  - Changed Java compilation process to produce Java 1.4-compatible class
    files instead of Java 1.3-compatible class files.

* Generated build file
  - Changed Java compilation process to produce Java 1.4-compatible class
    files instead of Java 1.3-compatible class files.
  - Expecting API implementation code to be Java 1.4-aware. This means, for
    example, that assertions will be supported, and using the 'assert' keyword
    as an identifier will cause a compilation failure.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.199:

* XINS/Java Server Framework:
  - Changed the handleCall() methods in the API and Function classes to throw
    an IllegalStateException if the object is not currently in the correct
    state.
  - Renamed protected reinitialize() method in class API to
    reinitializeImpl(). Generating package-private reinitialize() method in
    generated APIImpl classes.
  - Added message parameter to logdoc entry 1224.
  - Added message parameter to logdoc entry 1232.
  - Added message parameter to logdoc entry 1424.
  - Removed logdoc entry 1223, logging entry 1224 instead.
  - Removed logdoc entry 1231, logging entry 1232 instead.
  - Removed logdoc entry 1423, logging entry 1424 instead.

* XINS/Java Common Library:
  - Changed class PropertyReaderUtils: