@@ -122,7 +122,7 @@
 		       debug="${javac.debug}"
 		       deprecation="${javac.deprecation}"
 		       optimize="${javac.optimize}"
-                       source="${javac.targetvm}"
+		       source="${javac.targetvm}"
 		       target="${javac.targetvm}">
 			<classpath>
 				<fileset dir="lib"             includes="*.jar" />
@@ -187,14 +187,13 @@
 			<fileset dir="build/logdoc/${side}/java" includes="**/*.java" />
 		</copy>
 		<mkdir dir="build/classes/java-${side}" />
-		<javac
-		srcdir="build/src/java-${src.side}"
-		destdir="build/classes/java-${side}"
-		debug="${javac.debug}"
-		deprecation="${javac.deprecation}"
-		optimize="${javac.optimize}"
-                source="${javac.targetvm}"
-		target="${javac.targetvm}">
+		<javac srcdir="build/src/java-${src.side}"
+		       destdir="build/classes/java-${side}"
+		       debug="${javac.debug}"
+		       deprecation="${javac.deprecation}"
+		       optimize="${javac.optimize}"
+		       source="${javac.targetvm}"
+		       target="${javac.targetvm}">
 			<classpath>
 				<path refid="path.common" />
 				<pathelement location="build/logdoc.jar" />
@@ -244,13 +243,19 @@
 		in="src/logdoc/${side}/log.xml"
 		out="build/logdoc/${side}/build.xml"
 		style="src/xslt/logdoc/log_to_build.xslt">
-			<param name="xins_home"       expression="../../.."                    />
-			<param name="logdoc_xslt_dir" expression="../../../src/xslt/logdoc"    />
-			<param name="logdoc_dtd_dir"  expression="../../../src/dtd"            />
-			<param name="sourcedir"       expression="../../../src/logdoc/${side}" />
-			<param name="html_destdir"    expression="html"                        />
-			<param name="java_destdir"    expression="java"                        />
-			<param name="package_name"    expression="org.xins.${package}"         />
+			<xmlcatalog id="log-dtds">
+				<dtd location="src/dtd/log_1_0.dtd"
+						 publicId="-//XINS//DTD XINS Logdoc 1.0//EN" />
+				<dtd location="src/dtd/translation-bundle_1_0.dtd"
+						 publicId="-//XINS//DTD XINS Translation Bundle 1.0//EN" />
+			</xmlcatalog>
+			<param name="xins_home"       expression="${basedir}"                    />
+			<param name="logdoc_xslt_dir" expression="${basedir}/src/xslt/logdoc"    />
+			<param name="logdoc_dtd_dir"  expression="${basedir}/src/dtd"            />
+			<param name="sourcedir"       expression="${basedir}/src/logdoc/${side}" />
+			<param name="html_destdir"    expression="html"                          />
+			<param name="java_destdir"    expression="java"                          />
+			<param name="package_name"    expression="org.xins.${package}"           />
 		</style>
 	</target>
 
@@ -347,13 +352,12 @@
 
 	<target name="classes-tests" depends="-junit-task,java" description="Compiles the test cases">
 		<mkdir dir="build/classes/tests" />
-		<javac
-                destdir="build/classes/tests"
-                includes="**/*.java"
-                debug="true"
-                deprecation="false"
-		source="${javac.targetvm}"
-		target="${javac.targetvm}">
+		<javac destdir="build/classes/tests"
+		       includes="**/*.java"
+		       debug="true"
+		       deprecation="false"
+		       source="${javac.targetvm}"
+		       target="${javac.targetvm}">
 			<src path="src/tests" />
 			<classpath>
 				<pathelement location="build/xins-common.jar" />
