@@ -402,8 +402,8 @@
 						destdir="{$typeClassesDir}"
 						debug="true"
 						deprecation="${{deprecated}}"
-		                                source="1.4"
-		                                target="1.4">
+						source="1.4"
+						target="1.4">
 							<classpath>
 								<pathelement path="{$logdoc.jar}" />
 								<pathelement path="{$xins-common.jar}" />
@@ -676,8 +676,8 @@
 						destdir="{$classesDestDir}"
 						debug="true"
 						deprecation="${{deprecated}}"
-		                                source="1.4"
-		                                target="1.4">
+						source="1.4"
+						target="1.4">
 							<classpath>
 								<xsl:if test="$apiHasTypes = 'true'">
 									<pathelement path="{$typeClassesDir}" />
@@ -752,6 +752,7 @@
 						use="yes"
 						author="yes"
 						private="no"
+						source="1.4"
 						windowtitle="Implementation of {$api} API"
 						doctitle="Implementation of {$api} API">
 							<packageset dir="build/java-combined/{$api}" />
@@ -899,8 +900,8 @@
 					destdir="{$project_home}/build/classes-capi/{$api}"
 					debug="true"
 					deprecation="${{deprecated}}"
-		                        source="1.4"
-	                                target="1.4">
+					source="1.4"
+					target="1.4">
 						<classpath>
 							<pathelement path="{$logdoc.jar}"      />
 							<pathelement path="{$xins-common.jar}" />
@@ -940,6 +941,7 @@
 					use="yes"
 					author="yes"
 					private="no"
+					source="1.4"
 					windowtitle="Call interface for {$api} API"
 					doctitle="Call interface for {$api} API">
 						<packageset dir="build/java-capi/{$api}" />
@@ -951,7 +953,7 @@
 						offline="true"
 						packagelistloc="{$xins_home}/docs/javadoc/" />
 						<link
-						href="http://java.sun.com/j2se/1.3/docs/api"
+						href="http://java.sun.com/j2se/1.4.2/docs/api"
 						offline="true"
 						packagelistloc="{$xins_home}/src/package-lists/j2se/" />
 						<link
