@@ -29,6 +29,14 @@ CHANGES INTRODUCED IN XINS 0.201:
     class function for a default way of serializing a PropertyReader, using
     the Whisl encoding.
 
+* Generated build file
+  - The CAPI generated javadoc now links to the J2SE 1.4.2 and accepts the
+    assertion keyword.
+
+* Build and release process:
+  - Referred to the local location of Logdoc DTD files when creating the
+    logdoc/build.xml file.
+
 ______________________________________________________________________________
 CHANGES INTRODUCED IN XINS 0.200:
 
@@ -246,10 +254,10 @@ CHANGES INTRODUCED IN XINS 0.194:
 * XINS/Java Common Library:
   - Added getStream() method to class HTTPServiceCaller.Result. It returns an
     InputStream for the data returned from the HTTP call.
-  - Fixed bug in FastStringBuffer#append(charArray, offset, len) new lenght 
+  - Fixed bug in FastStringBuffer#append(charArray, offset, len) new lenght
     was set to oldLenght + charArray.lenght in stead of oldLenght + len.
   - Removed unused HTTPRequester class. Use the HTTPServiceCaller instead.
-    
+
 * Tests
   - Added FastStringBufferTests.
 
